# srain

./: meson.build
.github/workflows/: pack-mingw64.sh
blog/: atom.xml
data/: meson.build  srain.desktop.in.in
data/icons/: meson.build
data/metainfo/: meson.build  srain.metainfo.xml.in.in
src/: meson.build
src/inc/: self.h
src/lib/: path.c  self.c
